[master] | fixed jumped issue in animation

--- a/src/shared/modal/modal.scss
+++ b/src/shared/modal/modal.scss
@@ -39,9 +39,11 @@
 			transform: translate(0, 0);
 			background: #fff;
 			width: 100%;
+			height: 70%;
 			border-top-left-radius: 30px;
 			border-top-right-radius: 30px;
 			animation: bottomUp 0.5s ease-out;
+			padding-top: 20px;
 
 			&.remove {
 				animation: bottomDown 0.5s ease-out;
@@ -53,13 +55,13 @@
 				height: 0;
 			}
 			to {
-				height: 65%;
+				height: 70%;
 			}
 		}
 
 		@keyframes bottomDown {
 			from {
-				height: 65%;
+				height: 70%;
 			}
 			to {
 				height: 0;
